--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "whatsapp"
   ],
   "logo": "https://telegra.ph/file/f1ba2c02a99fb2458090d.jpg",
-  "repository": "https://github.com/Bbeltah/BBD",
+  "repository": "https://github.com/Huaweike/BBD",
   "succes_url": "/",
   "stack": "container",
   "env": {
